<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:backgroundTint="@color/blaga_ljubicasta"
    android:id="@+id/admin_login_fragment_id"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/dajsveljubicasti"
        android:id="@+id/imageView"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Administracija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="30sp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:hint="Korisničko ime"
        android:textColorHint="@color/navigationColor"
        android:textColor="@color/navigationColor"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/korime"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <EditText
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:hint="Lozinka"
        android:textColorHint="@color/navigationColor"
        android:textColor="@color/navigationColor"
        android:ems="10"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        android:id="@+id/lozinka"

        android:layout_below="@+id/korime"
        android:layout_alignStart="@+id/korime"
        android:layout_marginTop="30dp" />



    <Button
        android:text="Prijava"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textColor="#ffffff"
        android:id="@+id/admin_prijava_button"
        android:backgroundTint="@color/navigationColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

