<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
...
        </ListView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:id="@+id/admin_login_button"
            android:layout_alignParentBottom="true"
            android:alpha="0"
            android:text="Administracija"/>

    </LinearLayout>

...
