...

    <Button
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:id="@+id/button_odjava"
        android:layout_marginBottom="20dp"
        android:text="Odjavi se"
        android:background="#F2517E"/>

</LinearLayout>

...
